--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </nav>
         </header>
 
-        <section class="hero"></section>
+        <div class="hero" title="Horiseon Marketing"></div>
 
         <section class="content">
             <section id="search-engine-optimization" class="search-engine-optimization">
